# LoudnessCompensator

./: ASR_Post.md  CMakeLists.txt  Dockerfile.linux  LICENSE  LINUX_INSTALL.md  LoudnessCompensator.jucer  README.md  WINDOWS_INSTALL.md  build_juce.sh  build_linux.sh  docker_build_instructions.md  package_release.sh
.github/workflows/: build-linux.yml
Builds/MacOSX/: Info-AAX.plist  Info-AU.plist  Info-AUv3_AppExtension.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/LoudnessCompensator.xcodeproj/: project.pbxproj
Builds/MacOSX/LoudnessCompensator.xcodeproj/project.xcworkspace/xcuserdata/parkbyeongsu.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/LoudnessCompensator.xcodeproj/xcuserdata/parkbyeongsu.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ISO226Data.h  LoudnessCompensatorDSP.cpp  LoudnessCompensatorDSP.h  LoudnessCompensatorDSP_Debug.cpp  LoudnessCompensatorDSP_Fixed.cpp
release-1.0.1/: README.txt
release-1.0.1/macOS/LoudnessCompensator.appex/Contents/: Info.plist
release-1.0.1/macOS/LoudnessCompensator.vst3/Contents/: Info.plist
release-1.1.0/: README.txt
release-1.1.0/macOS/: install.sh
release-artifacts/LoudnessCompensator.vst3/Contents/_CodeSignature/: CodeResources
